@@ -235,9 +235,8 @@ namespace mesmer
 
     bool reportBasisSetDetails(false);
     if (reportBasisSetDetails) {
-      stringstream ss;
-      ss << "\nEigenvectors of: " << m_host->getName() << endl;
-      m_egvec->print(ss.str(), stest);
+      string ss = "\nEigenvectors of: " + m_host->getName() + "\n";
+      m_egvec->print(ss, stest);
 
       // The eigenvalues in this series should contain a zero eigenvalue as 
       // energy transfer operators are conservative.
